# python-devcontainer-template

./: .gitignore  MAINTAIN.md  README.md  poetry.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/extra/: .p10k.zsh  .zshrc
